--- a/SeleniumCSharp/packages.config
+++ b/SeleniumCSharp/packages.config
@@ -5,6 +5,8 @@
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net472" />
   <package id="FluentAssertions" version="6.12.0" targetFramework="net472" />
   <package id="Gherkin" version="19.0.3" targetFramework="net472" />
+  <package id="Microsoft.CodeCoverage" version="17.10.0" targetFramework="net472" />
+  <package id="Microsoft.NET.Test.Sdk" version="17.10.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="NUnit" version="4.1.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="4.5.0" targetFramework="net472" />
